example app finished now can search, select and delete, and add todo items (they are saved and loaded too)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Motodo</string>
+    <string name="app_name">MoTodo</string>
+    <string name="mainActivity_description">A simple todo list app</string>
 </resources>
